<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Events</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">BYUI EVENTS</string>
    <string name="action_search">Search</string>
    <string name="title_activity_week">WeekActivity</string>
    <string name="week">You Made It!</string>
    <string name="week_tab">Week</string>
    <string name="title_activity_day">DayActivity</string>
    <string name="title_activity_month">MonthActivity</string>
    <string name="title_activity_my_events">MyEventsActivity</string>
    <string name="action_filter">Filter</string>

    <string name="complete_activities">*Highlighted Events</string>
    <string name="activities_lifeSkills">Activities Life Skills - All</string>
    <string name="activities_social">Activities Social - All</string>
    <string name="activities_sports">Activities Sports - All</string>
    <string name="activities_talent">Activities Talent - All</string>
    <string name="activities_wellness">Activities Wellness - All</string>
    <string name="alumni_or_reunion">Alumni</string>
    <string name="broadcast_conference">Broadcast/Video Conference</string>
    <string name="concert">Concerts</string>
    <string name="conference_workshop">Conference/Workshop</string>
    <string name="devo_speeches">Devotional</string>
    <string name="get_connected">Get Connected/Activity</string>
    <string name="graduation">Graduation</string>
    <string name="theatre">Theatre Production</string>

    <string name="academicSocialEvent">Academic Social Event</string>
    <string name="activitiesOutdoor">Activities Outdoor</string>
    <string name="activitiesService">Activities Service</string>
    <string name="activitiesAwarness">Activities/Adaptive Awareness</string>
    <string name="departmentMusic">Department of Music</string>
    <string name="employeeEvents">Employee Events</string>
    <string name="employeeTraining">Employee Training Development</string>
    <string name="forum">Forum</string>
    <string name="freePlay">Free Play (open access)</string>
    <string name="meeting">Meeting, All Students</string>
    <string name="presentations">Presentations/Lectures</string>
    <string name="recitalFaculty">Recital, Faculty</string>
    <string name="recitalStudent">Recital, Student</string>
    <string name="studentAssociation">Student Association Event</string>
    <string name="studentHighlighted">Student Highlighted Events</string>
    <string name="studentSpirit">Student Spirit Event</string>

    <string name="clearFilter">Clear Filters</string>
    <string name="picture">Picture</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
   <string name="title_activity_event">Event Details</string>

</resources>
